Información de personajes

--- a/lore/templates/lore/404.html
+++ b/lore/templates/lore/404.html
@@ -1,6 +1,6 @@
 <html>
     <head></head>
     <body>
-        <h3>Oops... someone made a mistake</h3>
+        <h3>Oops... looks like someone made a mistake...</h3>
     </body>
 </html>
