--- a/lore/templates/lore/character.html
+++ b/lore/templates/lore/character.html
@@ -3,5 +3,50 @@
     <body>
         <h2>{{ character.name }}</h2>
         <img src="{{ character.image }}">
+
+        {% if character.house %}
+            <h4>House: {{ character.house }}</h4>
+        {% else %}
+            <h4>House: none</h4>
+        {% endif %}
+
+        {% if character.father %}
+            <h4>Father: <a href="/lore/character/{{ character.father }}">{{ character.father }}</a></h4>
+        {% else %}
+            <h4>Father: unknown</h4>
+        {% endif %}
+        
+        {% if character.mother %}
+            <h4>Mother: <a href="/lore/character/{{ character.mother }}">{{ character.mother }}</a></h4>
+        {% else %}
+            <h4>Mother: unknown</h4>
+        {% endif %}
+
+        {% if character.siblings %}
+            <h4>Siblings:</h4>
+            <ul>
+            {% for s in character.siblings %}
+                <li><a href="/lore/character/{{ s }}">{{ s }}</a></li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+
+        {% if character.lovers %}
+            <h4>Lovers:</h4>
+            <ul>
+                {% for lover in character.lovers %}
+                    <li><a href="/lore/character/{{ lover }}">{{ lover }}</a></li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+
+        {% if character.related %}
+            <h4>Related characters:</h4>
+            <ul>
+                {% for r in character.related %}
+                    <li><a href="/lore/character/{{ r.name }}">{{ r.name }}</a></li>
+                {% endfor %}
+            </ul>
+        {% endif %}
     </body>
 </html>
