--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,21 +2,24 @@
 
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'style.css' %}">
     </head>
     <body>
         <header>
-            <h1>Game of Thrones</h1>
-            <a href="/lore">Lore</a>
+            <h1 id="logo">Game of Thrones</h1>
+            <a id="lore-link" href="/lore">Lore</a>
             <a href="/forum">Forum</a>
             {% if request.session.username %}
-                <h3>Logged in as {{request.session.username}}</h3>
+                <p id="logged-in-indicator">Logged in as {{request.session.username}}</p>
                 <a href="/logout">Log out</a>
             {% else %}
                 <a href="/login">Log in</a>
             {% endif %}
         </header>
+        <div class="main-container">
         {% block content %}
         {% endblock %}
+        </div>
     </body>
 </html>
