--- a/app/templates/forum/thread.html
+++ b/app/templates/forum/thread.html
@@ -7,8 +7,8 @@
     <h6>Posts</h6>
     <button onclick="location.href='/forum/thread/{{ thread.pk }}/new'">New post</button>
     <div>
-        {% for p in posts.all %}
-            <div class="post-container">
+        {% for p in posts %}
+            <div class="post">
                 <p>{{ p.date }}</p>
                 <p>{{ p.content }}</p>
                 <p>#{{ p.positionInThread }}</p>
