--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
             <h1 id="logo">Game of Thrones</h1>
             <a id="lore-link" href="/lore">Lore</a>
             <a href="/forum">Forum</a>
+            <a href="/quiz">Quiz</a>
             {% if request.session.username %}
                 <p id="logged-in-indicator">Logged in as {{request.session.username}}</p>
                 <a href="/logout">Log out</a>
