--- a/app/templates/lore/cover.html
+++ b/app/templates/lore/cover.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Welcome to the lore app!</h1>
+    <h1>Welcome to the lore page!</h1>
     <h3>Pick a house:</h3>
     <ul>
         {% for h in houses %}
