--- a/app/templates/forum/newpost.html
+++ b/app/templates/forum/newpost.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h3>New post for thread <i>{{ thread.title }}</i></h3>
+    <h3>New post for thread: <i>{{ thread.title }}</i></h3>
     <form method="POST" action="/forum/thread/{{ thread.pk }}/new">
         {% csrf_token %}
-        {{ form }}
+        {{ form.content.label_tag }}<br><br>
+        {{ form.content }}<br><br>
         <input type="submit" value="Submit" />
     </form>
 {% endblock %}
