--- a/app/templates/forum/thread.html
+++ b/app/templates/forum/thread.html
@@ -2,17 +2,15 @@
 
 {% block content %}
     <h2>{{ thread.title }}</h2>
-    <h5>{{ thread.description }}</h5>
-
-    <h6>Posts</h6>
+    <h4>{{ thread.description }}</h4>
     <button onclick="location.href='/forum/thread/{{ thread.pk }}/new'">New post</button>
     <div>
         {% for p in posts %}
             <div class="post">
-                <p>{{ p.date }}</p>
-                <p>{{ p.content }}</p>
-                <p>#{{ p.positionInThread }}</p>
-                <p>Author: {{ p.user.username }}</p>
+                <p class="post-date"><b>Date:</b> {{ p.date }}</p>
+                <p class="post-content">{{ p.content }}</p>
+                <p class="post-author"><b>Author:</b> {{ p.user.username }}</p>
+                <p class="post-position">#{{ p.positionInThread }}</p>
             </div>
         {% endfor %}
     </div>
