--- a/app/templates/lore/house.html
+++ b/app/templates/lore/house.html
@@ -1,19 +1,27 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h2>{{ house.name }}</h2>
-    <img src="{{ house.logoURL }}" width="200" height="auto">
-    <h3>{{ house.words }}</h3>
-    <h4>Allegiances:</h4>
-    <ul>
-        {% for a in allegiance %}
-            <li><a href="/lore/house/{{a}}">{{ a }}</a></li>
-        {% endfor %}
-    </ul>
-    <h4>Related characters:</h4>
-    <ul>
-        {% for c in characters %}
-            <li><a href="/lore/character/{{ c.name }}">{{ c.name }}</a></li>
-        {% endfor %}
-    </ul>
+    <div id="house-content">
+        <div id="house-left-div">
+            <h2>{{ house.name }}</h2>
+            <h3>{{ house.words }}</h3>
+            <img src="{{ house.logoURL }}" width="200" height="auto">
+        </div>
+        <div id="house-center-div">
+            <h4>Related characters:</h4>
+            <ul>
+            {% for c in characters %}
+                <li><a href="/lore/character/{{ c.name }}">{{ c.name }}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
+        <div id="house-right-div">
+            <h4>Allegiances:</h4>
+            <ul>
+            {% for a in allegiance %}
+                <li><a href="/lore/house/{{a}}">{{ a }}</a></li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
 {% endblock %}
