--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <h1 id="logo">Game of Thrones</h1>
+            <h1 id="logo" onclick="location.href='/'" style="cursor: pointer">Game of Thrones</h1>
             <a id="lore-link" href="/lore">Lore</a>
             <a href="/forum">Forum</a>
             <a href="/quiz">Quiz</a>
