--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,7 +8,7 @@
         {{ form.username }}<br><br>
         {{ form.password.label_tag }}<br><br>
         {{ form.password }}<br><br>
-        <input type="submit" value="Login" />
+        <input class="button" type="submit" value="Login" />
     </form>
     <p>New here? <a href="/register/">Create an account</a></p>
 {% endblock %}
