--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -11,7 +11,7 @@
         {{ form.repassword.label_tag }}<br><br>
         {{ form.repassword }}<br><br>
         
-        <input type="submit" value="Register" />
+        <input class="button" type="submit" value="Register" />
     </form>
     <p>Already have a member? <a href="/login/">Log in</a></p>
 {% endblock %}
