--- a/app/templates/lore/404.html
+++ b/app/templates/lore/404.html
@@ -1,6 +1,5 @@
-<html>
-    <head></head>
-    <body>
-        <h3>Oops... looks like someone made a mistake...</h3>
-    </body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+<h3>Oops... we don't have the page you're looking for :(</h3>
+{% endblock %}
