--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -13,5 +13,5 @@
         
         <input class="button" type="submit" value="Register" />
     </form>
-    <p>Already have a member? <a href="/login/">Log in</a></p>
+    <p>Already a member? <a href="/login/">Log in</a></p>
 {% endblock %}
