--- a/app/templates/lore/cover.html
+++ b/app/templates/lore/cover.html
@@ -7,7 +7,7 @@
             <h3>Pick a house:</h3>
             <ul>
                 {% for h in houses %}
-                    <li><a href="/lore/house/{{h.name}}">{{ h.name }}</a></li>
+                    <li><a href="/lore/house/{{h.pk}}">{{ h.name }}</a></li>
                 {% endfor %}
             </ul>
         </div>
