--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -35,7 +35,7 @@
     <h2>6. Who is your favourite historical leader?</h2>
     <label for="qu"><input type="radio" name="nf" value="1" id="qu"/>Genghis Khan.</label><BR>
     <label for="qv"><input type="radio" name="nf" value="2" id="qv"/>Boudica.</label><BR>
-    <label for="qv"><input type="radio" name="nf" value="3" id="qv" />Catherine the Great</label><BR>
+    <label for="qvv"><input type="radio" name="nf" value="3" id="qvv" />Catherine the Great</label><BR>
     <label for="qw"><input type="radio" name="nf" value="4" id="qw" />Napoleon</label><BR>
         
     
