--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,9 +1,10 @@
 {% load static %}
-
+<!DOCTYPE html>
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'style.css' %}">
+        <title>Game of Thrones</title>
     </head>
     <body>
         <header>
