--- a/app/templates/lore/character.html
+++ b/app/templates/lore/character.html
@@ -33,6 +33,8 @@
                 {% endfor %}
                 </ul>
             {% endif %}
+
+            <h4>Slug: @{{ character.slug }}</h4>
         </div>
         <div id="character-right-div">
             {% if related %}
