--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -12,6 +12,6 @@
         {{ form.repassword }}<br><br>
         
         <input class="button" type="submit" value="Register" />
-    </form>
+    </form><br>
     <p>Already a member? <a href="/login/">Log in</a></p>
 {% endblock %}
