--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,6 +2,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="{% static 'jquery-3.4.1.js' %}"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="{% static 'style.css' %}">
         <title>Game of Thrones</title>
