--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,6 +9,6 @@
         {{ form.password.label_tag }}<br><br>
         {{ form.password }}<br><br>
         <input class="button" type="submit" value="Login" />
-    </form>
+    </form><br>
     <p>New here? <a href="/register/">Create an account</a></p>
 {% endblock %}
