--- a/app/templates/forum/newpost.html
+++ b/app/templates/forum/newpost.html
@@ -28,7 +28,7 @@
         el: "#vue-newPost",
         data: {
             contenido: "",
-            fecha: ""
+            fecha: new Date().toUTCString()
         }
     });
 </script>
