--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -196,7 +196,7 @@
                     <div class="row">
                         <div class="main_company roomy-100 text-center">
                             <h3 class="text-uppercase">{%blocktrans%}game of thrones{%endblocktrans%}</h3>
-                            <p>Izai Anda, Álvaro Gonzalez & Pablo Villacorta</p>
+                            <p>Izai Anda, Álvaro González & Pablo Villacorta</p>
                         </div>
                     </div>
                 </div>
