--- a/app/templates/forum/thread.html
+++ b/app/templates/forum/thread.html
@@ -11,11 +11,11 @@
         {% for p in posts %}
             <div class="post">
                 <p class="post-date"><b>{% trans 'Date'%}:</b> {{ p.date|date:'d/m/Y' }} {{ p.date|time:'h:i' }}</p>
-                <p class="post-content">{{ p.content|safe }}</p>
+                <div class="post-content">{{ p.content|safe }}</div>
                 <p class="post-author"><b>{% trans 'Author'%}:</b> {{ p.user.username }}</p>
                 <p class="post-position">#{{ p.positionInThread }}</p>
             </div>
         {% endfor %}
     </div>
-    <script src="{% static 'thread_slug.js' %}"></script>
+    <script src="{% static 'assets/js/popups.js' %}"></script>  
 {% endblock %}
