--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -160,7 +160,7 @@
                     <div class="collapse navbar-collapse" id="navbar-menu">
                         <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
                             <li><a class="text-black" href="/{{LANGUAGE_CODE}}/">{%blocktrans%}home{%endblocktrans%}</a></li> 
-							<li><a class="text-black" href="aboutus.html">{%blocktrans%}about{%endblocktrans%}</a></li> 							                   
+							<li><a class="text-black" href="/{{LANGUAGE_CODE}}/about">{%blocktrans%}about{%endblocktrans%}</a></li> 							                   
                             <li><a class="text-black" href="/{{LANGUAGE_CODE}}/lore">lore</a></li> 							
                             <li><a class="text-black" href="/{{LANGUAGE_CODE}}/forum">{%blocktrans%}forum{%endblocktrans%}</a></li>                                    
                             <li><a class="text-black" href="/{{LANGUAGE_CODE}}/quiz">{%blocktrans%}quiz{%endblocktrans%}</a></li>
