--- a/app/templates/base_content.html
+++ b/app/templates/base_content.html
@@ -195,21 +195,6 @@
                 </div>
             </section>
 
-
-            <!--Company section-->
-
-            <section id="company" class="company bg-light">
-                <div class="container">
-                    <div class="row">
-                        <div class="main_company roomy-100 text-center">
-                            <h3 class="text-uppercase">{%blocktrans%}game of thrones{%endblocktrans%}</h3>
-                            <p>Izai Anda, Álvaro González & Pablo Villacorta</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
             <!-- scroll up-->
             <div class="scrollup">
                 <a href="#"><i class="fa fa-chevron-up"></i></a>
@@ -225,8 +210,7 @@
                                     Made with 
                                     <i class="fa fa-heart"></i>
                                     by 
-                                    <a target="_blank" href="http://bootstrapthemes.co">Bootstrap Themes</a> 
-                                    2016. All Rights Reserved
+                                    <a href="#">Izai Anda, Álvaro González & Pablo Villacorta</a> 
                                 </p>
                             </div>
                             <div class="col-md-6 text-right sm-text-center sm-m-top-20">
