--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -186,22 +186,6 @@
             <!--PAGE CONTENT HERE-->
             {% block content %}
             {% endblock %}      
-                      
-
-
-            <!--Company section-->
-
-            <section id="company" class="company bg-light">
-                <div class="container">
-                    <div class="row">
-                        <div class="main_company roomy-100 text-center">
-                            <h3 class="text-uppercase">{%blocktrans%}game of thrones{%endblocktrans%}</h3>
-                            <p>Izai Anda, Álvaro González & Pablo Villacorta</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
 
             <!-- scroll up-->
             <div class="scrollup">
@@ -218,8 +202,7 @@
                                     Made with 
                                     <i class="fa fa-heart"></i>
                                     by 
-                                    <a target="_blank" href="http://bootstrapthemes.co">Bootstrap Themes</a> 
-                                    2016. All Rights Reserved
+                                    <a href="#">Izai Anda, Álvaro González & Pablo Villacorta</a> 
                                 </p>
                             </div>
                             <div class="col-md-6 text-right sm-text-center sm-m-top-20">
