--- a/app/templates/base_content.html
+++ b/app/templates/base_content.html
@@ -137,7 +137,7 @@
                     <!-- Start Atribute Navigation -->
                     <div class="attr-nav">
                         <ul>
-                            <li class="search"><a href="#"><i class="fa fa-search"></i></a></li>
+                            <li class="search"><a href="#"><i class="fa fa-search text-black"></i></a></li>
                         </ul>
                     </div>        
                     <!-- End Atribute Navigation -->
